--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -82,8 +84,7 @@ dependencies {
     // Easy Permissions
     implementation 'pub.devrel:easypermissions:3.0.0'
 
-    // Timber
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+
 
     // MPAndroidChart
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
@@ -111,6 +112,11 @@ dependencies {
 
     //sdp and ssp
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
+
+
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+
+    implementation ('org.web3j:core:4.6.0-android')
 
 }
 
